Fixed UserService.java method addToFavorites. Fixed animePage main info from being too close to the top. Adjusted animePage.js to do a null check before running the method.

--- a/Frontend/src/css/animePage.css
+++ b/Frontend/src/css/animePage.css
@@ -206,8 +206,10 @@ img {
     width: 60%;
     height: 100%;
     margin: auto;                               /* Div holding all the content below */
+    margin-top: 100px;
     z-index: 1;
     position: relative;
+   
 }
 
 hr {
